2004-09-06  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl: Removed hardcoded level names in logger::init.

2004-06-18  Andreas Kupries  <andreask@activestate.com>

	* log.man: Fixed bad formatting in documentation of 'logarray'.

2004-06-04  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl : Changed error handling from ::error to
	  logger.test: return -code error. Added more tests and
	  argument checking to make the code more robust.             
	  
2004-05-26  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl: Fixed bug with enable/disable
	  wrong enabled value was reported if disable critical was used.
	  Added "none" as result for currentloglevel for this situation.
	* logger.test: Added tests 7.1-7.4 to check for the above bug.
	* logger.man: Fixed docs and replaced the nonsensical "or" with 
	  the correct "and" in enable/disable docs. Added a comment how
	  to completely disable logging for a service and its children. 

2004-05-25  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl: Fixed bug [948273] in ::logger::services
	  Fixed cleanup of services list in delproc
	  Implemented doc'ed but missing ${log}::services subcommand
	  Fixed misuse of set inside namespace eval to prevent 
	  overwriting of global variables
	  Added new subcommands servicecmd and servicename 
	  for introspection
	  Added introspection to logproc and delproc
	  Version number changed to 0.4
	* pkgIndex.tcl: updated version number of logger package
	* logger.man: updated docs for ${log}::services,
	  ${log}::delproc and ${log}::logproc.
	  Added docs for servicecmd and servicename.
	* logger.test: Added tests for new features and fixed bugs

2004-05-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* log.tcl: New command 'loghex' for logging of binary data.
	* log.man: Documented the new 'loghex', and 'logarray'.

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
